--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/jwt": "^10.0.3",
     "@nestjs/mongoose": "^9.2.2",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.3.0",
+    "bcrypt": "^5.1.0",
     "cross-env": "^7.0.3",
     "mongoose": "^7.0.4",
     "reflect-metadata": "^0.1.13",
